R4GFX/Bindings/C/r4gfx.h

typedef struct R4GfxLinearLayout {
    uint64_t byte_length;
    uint64_t pitch;
    uint32_t width;
    uint32_t height;
    uint32_t format;
    uint32_t reserved;
} R4GfxLinearLayout;
typedef struct R4GfxCpuImage {
    uint64_t cpu_address;
    uint64_t byte_length;
    uint64_t pitch;
    uint32_t width;
    uint32_t height;
    uint32_t format;
    uint32_t reserved;
} R4GfxCpuImage;
typedef struct R4GfxRect {
    uint32_t x;
    uint32_t y;
    uint32_t width;
    uint32_t height;
} R4GfxRect;
typedef struct R4GfxRenderCaps {
    uint32_t version;
    uint32_t size;
    uint32_t backend;
    uint32_t formats;
    uint32_t operations;
    uint32_t samplers;
    uint32_t max_images;
    uint32_t max_commands;
    uint64_t max_pixels;
    uint32_t features;
    uint32_t reserved;
} R4GfxRenderCaps;
typedef struct R4GfxCpuDraw {
    uint32_t operation;
    uint32_t source_index;
    uint32_t target_index;
    uint32_t sampler;
    R4GfxRect source_rect;
    R4GfxRect target_rect;
    uint32_t color;
    uint32_t opacity;
    uint32_t reserved0;
    uint32_t reserved1;
} R4GfxCpuDraw;
typedef struct R4GfxCpuBatch {
    uint64_t images;
    uint64_t commands;
    uint32_t image_count;
    uint32_t command_count;
    uint64_t pixel_budget;
    uint32_t flags;
    uint32_t reserved;
} R4GfxCpuBatch;
typedef struct R4GfxCpuStats {
    uint64_t read_bytes;
    uint64_t write_bytes;
    uint64_t pixels;
    uint32_t commands;
    uint32_t reserved;
} R4GfxCpuStats;
typedef struct R4GfxDevice {
    uint64_t address;
    uint64_t generation;
} R4GfxDevice;
typedef struct R4GfxDeviceConfig {
    uint32_t version;
    uint32_t size;
    uint64_t storage_address;
    uint64_t storage_bytes;
    uint64_t start_context;
    uint32_t preferred_adapter;
    uint32_t flags;
} R4GfxDeviceConfig;
typedef struct R4GfxDeviceInfo {
    uint32_t version;
    uint32_t size;
    uint64_t generation;
    uint32_t adapter_id;
    uint32_t backend;
    uint64_t device_generation;
    uint64_t reset_generation;
    uint32_t formats;
    uint32_t operations;
    uint32_t samplers;
    uint32_t gpu_operations;
    uint32_t resource_capacity;
    uint32_t job_capacity;
    uint64_t imports;
    uint64_t imported_bytes;
    uint64_t cpu_read_bytes;
    uint64_t cpu_write_bytes;
    uint64_t gpu_copy_bytes;
    uint64_t upload_bytes;
    uint64_t backend_changes;
} R4GfxDeviceInfo;
typedef struct R4GfxResource {
    uint32_t slot;
    uint32_t kind;
    uint64_t generation;
    uint64_t device_generation;
    uint64_t device_address;
} R4GfxResource;
typedef struct R4GfxResourceDesc {
    uint32_t version;
    uint32_t size;
    uint32_t kind;
    uint32_t flags;
    uint32_t source_kind;
    uint32_t sampler;
    uint32_t operation;
    uint32_t reserved;
    uint64_t source_address;
    uint64_t source_generation;
    R4GfxCpuImage image;
} R4GfxResourceDesc;
typedef struct R4GfxResourceInfo {
    uint32_t version;
    uint32_t size;
    R4GfxResource resource;
    uint32_t source_kind;
    uint32_t flags;
    uint64_t source_generation;
    uint32_t buffer_id;
    uint32_t references;
    uint64_t buffer_generation;
    R4GfxCpuImage image;
} R4GfxResourceInfo;
typedef struct R4GfxDraw {
    R4GfxResource target;
    R4GfxResource source;
    R4GfxResource sampler;
    R4GfxResource pipeline;
    R4GfxRect source_rect;
    R4GfxRect target_rect;
    uint32_t color;
    uint32_t opacity;
} R4GfxDraw;
typedef struct R4GfxRenderBatch {
    uint64_t commands;
    uint32_t command_count;
    uint32_t flags;
    uint64_t pixel_budget;
} R4GfxRenderBatch;
typedef struct R4GfxRenderStats {
    R4GfxCpuStats cpu;
    uint32_t backend;
    uint32_t fallback;
} R4GfxRenderStats;
typedef struct R4GfxCopyRequest {
    R4GfxResource source;
    R4GfxResource target;
    uint64_t source_offset;
    uint64_t target_offset;
    uint64_t byte_length;
    uint64_t deadline_ns;
} R4GfxCopyRequest;
typedef struct R4GfxJob {
    uint32_t slot;
    uint32_t reserved;
    uint64_t generation;
    uint64_t device_generation;
    uint64_t device_address;
} R4GfxJob;
typedef struct R4GfxJobInfo {
    uint32_t version;
    uint32_t size;
    uint32_t phase;
    uint32_t result;
    uint32_t flags;
    uint32_t backend;
    uint64_t timeline;
    uint64_t point;
    uint64_t device_generation;
    uint64_t reset_generation;
} R4GfxJobInfo;
typedef struct R4GfxCopyFence {
    uint32_t slot;
    uint32_t adapter_id;
    uint64_t timeline;
    uint64_t point;
    uint64_t device_generation;
    uint64_t reset_generation;
} R4GfxCopyFence;
typedef struct R4GfxCopyRequestEx {
    uint32_t version;
    uint32_t size;
    R4GfxCopyRequest copy;
    uint32_t row_count;
    uint32_t dependency_count;
    uint64_t source_pitch;
    uint64_t target_pitch;
    uint64_t dependencies;
} R4GfxCopyRequestEx;
typedef struct R4GfxNativeImage {
    uint32_t version;
    uint32_t size;
    uint64_t deadline_ns;
    uint32_t width;
    uint32_t height;
    uint32_t format;
    uint32_t layout;
} R4GfxNativeImage;